--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -13,7 +13,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: checkout
-              uses: actions/checkout@4
+              uses: actions/checkout@v4
             - name: Luacheck
               uses: lunarmodules/luacheck@v1.1.0
               with:
